fix for grayscale on Firefox

--- a/photos/static/photos/css/style.css
+++ b/photos/static/photos/css/style.css
@@ -67,19 +67,20 @@ background-color:blue;
 
 
 .photo-label {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  font-weight: normal;
-  font-size:40px;
-  color:white;
-  text-transform: uppercase;
-  position: absolute;      
-  bottom: 5px;
-  left: 12px;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: normal;
+    font-size:40px;
+    color:white;
+    text-transform: uppercase;
+    position: absolute;      
+    bottom: 5px;
+    left: 12px;
 }
 
 .thumbs img:hover
 {
-    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: grayscale(100%); /* Firefox 34+ */
     filter: gray; /* IE6-9 */
     -webkit-filter: grayscale(1); /* Google Chrome & Safari 6+ */
 }
@@ -127,7 +128,14 @@ position: fixed;
 top: 0;
 left: 0;
 
--webkit-filter: blur(3px) opacity(1) ;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><feColorMatrix type="matrix" values="0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0"/></svg>"); /* Firefox 10+, Firefox on Android */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><feGaussianBlur in="SourceGraphic" stdDeviation="10"/></svg>"); 
+-moz-filter: blur(3px); 
+    filter: blur(3px); /* Firefox 34+ */
+    -webkit-filter: blur(3px); /* Google Chrome & Safari 6+ */
+    filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
+}
+.background img{
 }
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
